Fix buggy z-index for header / sticky elements

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -101,9 +101,9 @@
 
   --z-negative: -1; // to hide something behind everything else
   --z-elevate: 1; // to elevate something, just a little, in relation to its sibling
-  --z-sticky: 100; // header, mobile actions bar
   --z-drawer: 200; // sidebar sliding nav drawers
   --z-modal: 300; // modals ¯\_(ツ)_/¯
   --z-dropdown: 400; // all kinds of dropdowns
   --z-popover: 500; // tooltips, snackbars, etc.
+  --z-sticky: 600; // header, mobile actions bar
 }
